# DirSync

./: .gitignore  CMakeLists.txt  README.md
Base/: CMakeLists.txt
Base/private/: BaseFramework.cpp  BaseObject.cpp  BaseObjectContainer.cpp  BaseObjectMeta.cpp  BaseObjectMetaContainer.cpp  BaseObjectMetaContainer.h  BaseObjectMetaTag.cpp
Base/public/: BaseFramework.h  BaseObject.h  BaseObjectContainer.h  BaseObjectMeta.h  BaseObjectMetaTag.h
Common/: CMakeLists.txt
Common/private/: Common.cpp
Common/public/: Common.h
Electron/resources/app/: index.html  main.css  main.js  package-lock.json
Electron/resources/app/config/: prefs.json  sys.json
Electron/resources/app/html/: bar.html  button.html  directory_panel.html  download_file_label.html  main_panel.html  modal.html  network_interface_panel.html  notification.html  notification_frame.html  option.html  selection_item.html  selection_panel.html  simple_bar_label.html  switch.html
Electron/resources/app/scripts/: backend.js  files.js  httpserver.js  init.js  peers.js  pipeServer.js  renderHTML.js  tcpServer.js  udpserver.js
Electron/resources/app/scripts/dom/: directoryModule.js  mainModule.js  modal.js  netInterfaceModule.js  notificationModule.js  renderHTML.js  switchModule.js
JS/: index.html  main.css  package-lock.json  package.json
JS/config/: prefs.json
JS/configs/: prefs.json
JS/scripts/: files.js  httpserver.js  pipeServer.js  udpclient.js
JSONParser/: CMakeLists.txt
JSONParser/private/: JSONBuilder.cpp  JSONParser.cpp  JSONValue.cpp
JSONParser/public/: JSONBuilder.h  JSONParser.h  JSONValue.h
Jobs/: CMakeLists.txt
Jobs/private/: Job.cpp  JobSystem.cpp  JobSystemMeta.cpp  Jobs.cpp  Thread.cpp  Thread.h
Jobs/public/: Job.h  JobSystem.h  JobSystemMeta.h  Jobs.h
Lock/: CMakeLists.txt
Lock/private/: Lock.cpp
Lock/public/: Lock.h
Main/: CMakeLists.txt  Hash.cpp  Hash.h  main.cpp
Parser/: CMakeLists.txt
Parser/private/: codeSource.cpp  grammar.cpp  parserTable.cpp  tokenizer.cpp  tokenizer.h
Parser/public/: codeSource.h  grammar.h  parserTable.h
PipeServer/: CMakeLists.txt
PipeServer/private/: Hash.cpp  Hash.h  PipeServer.cpp
PipeServer/public/: PipeServer.h
Profiling/: CMakeLists.txt
Profiling/private/: Profiler.cpp  Profiler.h  ProfilerJobSystemMeta.cpp  ProfilerJobSystemMeta.h  ProfilerMeta.cpp  ProfilerMeta.h  Profiling.cpp
Profiling/public/: Profiling.h
UDP/: CMakeLists.txt
UDP/private/: BandwidthTester.cpp  ChunkDownloader.cpp  ChunkDownloader.h  FileDownloader.cpp  FileManager.cpp  FileServer.cpp  FileWriter.cpp  FileWriter.h  JSPool.cpp  JSPool.h  UDP.cpp  UDPClient.cpp  UDPResponseBucket.cpp
UDP/public/: BandwidthTester.h  FileDownloader.h  FileManager.h  FileServer.h  UDP.h  UDPClient.h  UDPResponseBucket.h
